--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -5,6 +5,14 @@
   margin: 0 auto;
   margin-top: 60px;
 
+  .icons{
+    a {
+      font-size: 24px;
+      text-decoration: none;
+      color: #1b0273;
+    }
+  }
+
   > .row {
     display: flex;
     align-items: flex-start;
@@ -34,6 +42,10 @@
       font-size: 14px;
       color: #373737;
       max-width: 600px;
+
+      >p:nth-child(1){
+        margin-top: 0;
+      }
     }
   }
 
@@ -102,6 +114,10 @@
         width: 30%;
         height: 100%;
         margin-bottom: 3%;
+
+        &:nth-child(7){
+          display: none;
+        }
       }
     }
   }
