--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -78,7 +78,12 @@
     grid-auto-flow: column;
     grid-row-gap: 5px;
     grid-column-gap: 10px;
+    align-items: center;
     img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+    
       &.large {
         grid-column: 1/3;
         grid-row: 1/-1;
@@ -111,6 +116,7 @@
 
       img.large,
       img {
+
         width: 30%;
         height: 100%;
         margin-bottom: 3%;
