--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -17,9 +17,19 @@
     display: flex;
     align-items: flex-start;
     margin-bottom: 44px;
+    padding: 0 5%;
+    
+    &.about{
+      .content p:first-child::first-letter{
+        font-size: 150%;
+        font-weight: bold;
+        color: red;
+        line-height: 100%;
+      }
+    }
 
     .label-wrapper {
-      min-width: 3em;
+      min-width: 4em;
       text-align: right;
       margin-right: 25px;
 
@@ -79,6 +89,7 @@
     grid-row-gap: 5px;
     grid-column-gap: 10px;
     align-items: center;
+    margin-bottom: 44px;
     img {
       display: block;
       max-width: 100%;
