--- a/src/pages/home/styles.scss
+++ b/src/pages/home/styles.scss
@@ -20,11 +20,15 @@
     padding: 0 5%;
     
     &.about{
-      .content p:first-child::first-letter{
-        font-size: 150%;
-        font-weight: bold;
-        color: red;
-        line-height: 100%;
+      .content .self-intro {
+        white-space: pre-line;
+        
+        &::first-letter{
+          font-size: 150%;
+          font-weight: bold;
+          color: red;
+          line-height: 100%;
+        }
       }
     }
 
